--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -31,3 +31,20 @@ html {
     display: flex;
     flex-wrap: wrap;
 }
+
+/* Animation */
+
+@keyframes fadeIn {
+    /* 0% {
+
+    }
+    100% {
+
+    } */
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
