--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,6 +3,7 @@
     --white-color: #fff;
     --black-color: #000;
     --text-color: #333;
+    --primary-color: #ee4d2d;
 }
 
 * {
@@ -47,4 +48,30 @@ html {
     to {
         opacity: 1;
     }
+}
+
+/* Modal */
+.modal {
+    position: fixed;
+    display: flex;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+
+.modal__overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal__body {
+    margin: auto;
+    width: 300px;
+    height: 300px;
+    background-color: sandybrown;
+    z-index: 999999;
+    border-radius: 5px;
 }
