--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -126,35 +126,116 @@
     background-color: var(--white-color);
     border-radius: 3px;
     border: 1px solid #D3D3D3;
+    cursor: default;
+    /* Hiển thị thông báo từ phải qua trái */
+    transform-origin: top right;
+    animation: headerNotifyGrowth ease-in 0.26s;
+    will-change: opacity transform;
+    display: none;
 }
+
+.header__notify::before {
+    position: absolute;
+    border-width: 20px 30px;
+    border-style: solid;
+    content: "";
+    border-color: transparent transparent var(--white-color) transparent;
+    top: -30px;
+    right: 0;
+}
+
+.header__notify::after {
+    content: "";
+    display: block;
+    position: absolute;
+    right: 0;
+    top: -12px;
+    width: 100%;
+    height: 12px;
+    /* background-color: red; */
+}
+
+.header__navbar-item--has-notify:hover .header__notify {
+    display: block;
+}
+
+@keyframes headerNotifyGrowth {
+    from {
+        opacity: 0;
+        transform: scale(0);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
 .header__notify-header {
     height: 40px;
     background-color: var(--white-color);
+    line-height: 40px;
 }
 .header__notify-header h3 {
-    color: #666;
+    color: #999;
     margin: 0 0 0 12px;
     font-weight: 500;
     font-size: 1.4rem;
 }
 .header__notify-list {
-
+    /* background-color: rgb(243, 239, 239); */
+    padding-left: 0;
 }
 .header__notify-item {
-
+    display: flex;
 }
-.header__notify-link {
 
+.header__notify-item:hover {
+    background-color: #f7f7f7;
+}
+
+/* .header__notify-item--viewed {
+
+} */
+
+.header__notify-link {
+    display: flex;
+    padding: 12px;
+    text-decoration: none;
+    background-color: rgba(128, 124, 124, 0.1);
+    width: 100%;
 }
 .header__notify-img {
-
+    width: 48px;
+    object-fit: contain;
 }
 .header__notify-info {
-
+    margin-left: 12px;
 }
 .header__notify-name {
-
+    color: black;
+    display: block;
+    font-size: 1.4rem;
+    font-weight: 400;
 }
 .header__notify-description {
+    margin-top: 4px;
+    display: block;
+    color: #756F6E;
+    font-size: 1.2rem;
+}
 
+.header__notify-footer {
+    /* text-align: center; */
+    display: flex;
+    /* justify-content: center; */
+}
+
+.header__notify-footer-btn {
+    text-decoration: none;
+    color: var(--text-color);
+    padding: 15px 32px;
+    margin: auto;
+    font-size: 1.4rem;
+    font-weight: 400;
 }
