--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,6 +4,7 @@
     --black-color: #000;
     --text-color: #333;
     --primary-color: #ee4d2d;
+    --border-color: #dbdbdb;
 }
 
 * {
@@ -69,9 +70,36 @@ html {
 
 .modal__body {
     margin: auto;
-    width: 300px;
-    height: 300px;
-    background-color: sandybrown;
+    background-color: var(--white-color);
     z-index: 999999;
     border-radius: 5px;
+}
+
+/* Button style */
+.btn {
+    min-width: 142px;
+    height: 35px;
+    border: none;
+    text-decoration: none;
+    border-radius: 2px;
+    font-size: 1.4rem;
+    padding: 0;
+    cursor: pointer;
+    color: var(--text-color);
+}
+
+.btn:hover {
+    background-color: rgba(0, 0, 0, 0.08);
+}
+
+.btn.btn--primary {
+    color: var(--white-color);
+    background-color: var(--primary-color);
+}
+
+.auth-form__socials {
+    background-color: #f5f5f5;
+    padding: 16px 32px;
+    display: flex;
+    justify-content: space-between;
 }
