--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -51,6 +51,15 @@ html {
     }
 }
 
+@keyframes growth {
+    from {
+        transform: scale(var(--growth-from));
+    }
+    to {
+        transform: scale(var(--growth-to));
+    }
+}
+
 /* Modal */
 .modal {
     position: fixed;
@@ -59,6 +68,7 @@ html {
     right: 0;
     left: 0;
     bottom: 0;
+    animation: fadeIn linear 0.4s;
 }
 
 .modal__overlay {
@@ -69,10 +79,13 @@ html {
 }
 
 .modal__body {
+    /* Hiển thị từ 70% -> 100% (modal) */
+    --growth-from: 0.7;
+    --growth-to: 1;
     margin: auto;
-    background-color: var(--white-color);
     z-index: 999999;
-    border-radius: 5px;
+    position: relative;
+    animation: growth linear 0.2s;
 }
 
 /* Button style */
@@ -83,12 +96,17 @@ html {
     text-decoration: none;
     border-radius: 2px;
     font-size: 1.4rem;
-    padding: 0;
+    padding: 0 12px;
     cursor: pointer;
     color: var(--text-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    line-height: 0;
 }
 
-.btn:hover {
+.btn.btn--normal:hover {
     background-color: rgba(0, 0, 0, 0.08);
 }
 
@@ -97,9 +115,16 @@ html {
     background-color: var(--primary-color);
 }
 
-.auth-form__socials {
-    background-color: #f5f5f5;
-    padding: 16px 32px;
-    display: flex;
-    justify-content: space-between;
+.btn.btn--size-s {
+    padding: 0 8px;
+    height: 30px;
+    font-size: 12px;
+}
+
+.fa-google {
+    background: conic-gradient(from -45deg, #ea4335 110deg, #4285f4 90deg 180deg, #34a853 180deg 270deg, #fbbc05 270deg) 73% 55%/150% 150% no-repeat;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    -webkit-text-fill-color: transparent;
 }
