--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -20,7 +20,10 @@
 }
 
 .auth-form {
+    background-color: var(--white-color);
     width: 500px;
+    border-radius: 5px;
+    overflow: hidden;
 }
 
 .auth-form__form {
@@ -70,3 +73,52 @@
     margin-right: 8px;
 }
 
+.auth-form__socials {
+    margin-top: 24px;
+    background-color: #f5f5f5;
+    padding: 20px 32px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.auth-form__socials-icon {
+    font-size: 1.8rem;
+}
+
+.auth-form__socials--facebook {
+    color: var(--white-color);
+    background-color: #3a5a98;
+}
+
+.auth-form__socials-title {
+    margin: 0 36px;
+}
+
+.auth-form__socials--google {
+    color: var(--text-color);
+    background-color: var(--white-color);
+}
+
+.auth-form__help {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.auth-form__help-link {
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    font-weight: 500;
+}
+
+.auth-form__help--separate {
+    display: block;
+    border-left: 1px solid var(--border-color);
+    height: 20px;
+    margin: 0 16px;
+}
+
+.auth-form__help-forgot {
+    color: var(--primary-color);
+}
