--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,19 +1,18 @@
 .header {
-    height: 120px;
+    height: var(--header-height);
     background-image: linear-gradient(0, #fe6433, #f53e2d);
 }
 
 .header__navbar {
     display: flex;
     justify-content: space-between;
+    height: var(--navbar-height);
 }
 
 .header__navbar-list {
     list-style: none;
-    /* display: flex; */
-    /* justify-self: center; */
     padding-left: 0;
-    margin-top: 4px;
+    margin: 4px 0 0 0;
 }
 
 .header__navbar-item {
@@ -238,4 +237,170 @@
     margin: auto;
     font-size: 1.4rem;
     font-weight: 400;
+}
+
+.header-with-search {
+    height: var(--header-with-search-height);
+    display: flex;
+    align-items: center;
+    margin: 0 8px;
+}
+
+.header__logo {
+    width: 200px;
+}
+
+.header__logo-img {
+    width: 150px;
+}
+
+.header__search {
+    flex: 1;
+    height: 40px;
+    background-color: var(--white-color);
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+}
+
+.header__cart {
+    width: 150px;
+    text-align: center;
+}
+
+.header__cart-icon {
+    color: var(--white-color);
+    font-size: 2.4rem;
+    margin-top: 8px;
+}
+
+.header__search-input-wrap {
+    flex: 1;
+    height: 100%;
+    position: relative;
+}
+.header__search-input {
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    padding: 0 16px;
+    border-radius: 3px;
+}
+
+.header__search-select {
+    border-left: 1px solid #e8e8e8;
+    padding-left: 16px;
+    position: relative;
+}
+
+.header__search-select:hover .header__search-options {
+    display: block;
+}
+
+.header__search-select-label {
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
+
+.header__search-select-icon {
+    position: relative;
+    top: 2px;
+    margin: 0 8px;
+    font-size: 1.4rem;
+    color: rgb(131, 131, 131);
+}
+
+.header_search-btn {
+    background-color: var(--primary-color);
+    border: none;
+    height: 34px;
+    font-size: 1.4rem;
+    color: var(--white-color);
+    border-radius: 3px;
+    margin-right: 3px;
+    width: 60px;
+    outline: none;
+}
+
+.header_search-btn:hover {
+    background-color: #ef735a;
+    cursor: pointer;
+}
+
+.header_search-btn-icon {
+
+}
+
+.header__search-options {
+    position: absolute;
+    right: 0;
+    top: 100%;
+    width: 148px;
+    list-style: none;
+    box-shadow: 0 1px 2px #ccc;
+    padding-left: 0;
+    margin-top: 13px;
+    display: none;
+}
+
+.header__search-options::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -15px;
+    width: 100%;
+    height: 18px;
+    left: 0;
+    /* background-color: red; */
+    margin-bottom: 0;
+
+}
+.header__search-options-items {
+    background-color: var(--white-color);
+    padding: 8px 8px;
+    /* border-radius: 3px; */
+}
+
+.header__search-options-items:first-child {
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+
+.header__search-options-items:last-child {
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+.header__search-options-items:hover {
+    background-color: #fafafa;
+    cursor: pointer;
+}
+
+.header__search-options-items span {
+    font-size: 1.4rem;
+    color: var(--text-color);
+    margin-left: 8px;
+}
+
+.header__search-options-items i {
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    margin-left: 12px;
+}
+
+/* Search History */
+
+.header__search-history {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: calc(100% - 16px);
+    background-color: var(--white-color);
+    z-index: 123;
+    border-radius: 3px;
+    box-shadow: 0 0 3px #666;
+    margin-top: 2px;
 }
