--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -123,7 +123,7 @@
     width: 404px;
     right: 0;
     background-color: var(--white-color);
-    border-radius: 3px;
+    border-radius: 2px;
     border: 1px solid #D3D3D3;
     cursor: default;
     /* Hiển thị thông báo từ phải qua trái */
@@ -131,6 +131,7 @@
     animation: headerNotifyGrowth ease-in 0.26s;
     will-change: opacity transform;
     display: none;
+    z-index: 99999;
 }
 
 .header__notify::before {
@@ -258,7 +259,7 @@
     flex: 1;
     height: 40px;
     background-color: var(--white-color);
-    border-radius: 3px;
+    border-radius: 2px;
     display: flex;
     align-items: center;
 }
@@ -287,7 +288,7 @@
     font-size: 1.4rem;
     color: var(--text-color);
     padding: 0 16px;
-    border-radius: 3px;
+    border-radius: 2px;
 }
 
 .header__search-select {
@@ -319,7 +320,7 @@
     height: 34px;
     font-size: 1.4rem;
     color: var(--white-color);
-    border-radius: 3px;
+    border-radius: 2px;
     margin-right: 3px;
     width: 60px;
     outline: none;
@@ -395,12 +396,235 @@
 
 .header__search-history {
     position: absolute;
-    top: 100%;
+    top: calc(100% + 2px);
     left: 0;
     width: calc(100% - 16px);
     background-color: var(--white-color);
     z-index: 123;
-    border-radius: 3px;
+    border-radius: 2px;
     box-shadow: 0 0 3px #666;
+    overflow: hidden;
+    display: none;
+}
+
+.header__search-history-heading {
+    margin: 6px 12px;
+    font-size: 1.4rem;
+    color: #999;
+    font-weight: 400;
+}
+
+.header__search-history-list {
+    padding-left: 0;
+    list-style: none;
+    margin: 6px 0 0;
+}
+
+.header__search-history-item {
+    height: 38px;
+    padding: 0 12px;
+}
+
+/* .header__search-history-item:last-child {
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+} */
+
+.header__search-history-item:hover {
+    background-color: #FAFAFA;
+    cursor: pointer;
+}
+
+.header__search-history-item--link {
+    line-height: 38px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: var(--text-color);
+}
+
+.header__search-input:focus ~ .header__search-history {
+    display: block;
+}
+
+/* Cart */
+.header__cart-wrap {
+    position: relative;
+    display: inline-block;
+    padding: 0 10px;
+    cursor: pointer;
+}
+
+.header__cart-wrap:hover .header__cart-list {
+    display: block;
+}
+
+.header__cart {
+    width: 150px;
+    text-align: center;
+}
+
+
+.header__cart-list {
+    --growth-from: 0.5;
+    --growth-to: 1;
+    position: absolute;
+    top: calc(100% + 5px);
+    right: 0;
+    background-color: var(--white-color);
+    width: 400px;
+    border-radius: 2px;
+    box-shadow: 0 1px 3.125rem rgba(0, 0, 0, 0.2);
+    z-index: 999;
+    animation: growth linear 0.2s;
+    transform-origin: top right;
+    will-change: opacity transform;
+    cursor: default;
+    display: none;
+}
+
+.header__cart-list::after {
+    content: "";
+    position: absolute;
+    top: -26px;
+    right: 2px;
+    border-style: solid;
+    border-width: 16px 20px;
+    border-color: transparent transparent var(--white-color) transparent;
     margin-top: 2px;
+    cursor: pointer;
+}
+
+.header__cart-list--no-cart {
+    padding: 28px 0;
+}
+
+.header__cart-list--no-cart .header__cart-no-cart-img,
+.header__cart-list--no-cart .header__cart-list-no-cart-msg {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.header__cart-no-cart-img {
+    width: 54%;
+    display: none;
+}
+
+.header__cart-list-no-cart-msg {
+    display: none;
+    font-size: 1.4rem;
+    margin-top: 14px;
+    color: var(--text-color);
+}
+
+.header__cart-notice {
+    position: absolute;
+    padding: 2px 5px;
+    background-color: var(--white-color);
+    color: var(--primary-color);
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    border-radius: 8px;
+    border: 2px solid #EE4D2D;
+    right: -4px;
+    top: -4px;
+}
+
+.header__cart-heading {
+    text-align: left;
+    margin: 8px 0 8px 12px;
+    font-size: 1.4rem;
+    color: #999;
+    font-weight: 400;
+}
+
+.header__cart-list-item {
+    padding-left: 0;
+    list-style: none;
+    background-color: #FDFDFD;
+}
+
+.header__cart-item {
+    display: flex;
+    align-items: center;
+}
+
+.header__cart-item:hover {
+    background-color: #f8f8f8;
+}
+
+.header__cart-img {
+    width: 40px;
+    height: 40px;
+    margin: 12px;
+    border: 1px solid var(--border-color);
+}
+
+.header__cart-item-info {
+    width: 100%;
+    margin-right: 12px;
+}
+
+.header__cart-item-head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header__cart-item-name {
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: var(--text-color);
+    margin: 0;
+}
+
+.header__cart-item-price {
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: var(--primary-color);
+}
+
+.header__cart-item-multiply {
+    color: #757575;
+    font-size: 0.9rem;
+    margin: 0 4px;
+}
+
+.header__cart-item-qnt {
+    color: #757575;
+    font-size: 1.3rem;
+}
+
+.header__cart-item-body {
+    /* text-align: left; */
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2px;
+}
+
+.header__cart-item-description {
+    color: #757575;
+    font-weight: 300;
+    font-size: 1.1rem;
+
+}
+
+.header__cart-item-remove {
+    color: var(--text-color);
+    font-size: 1.3rem;
+    font-weight: 400;
+}
+
+.header__cart-item-remove:hover {
+    color: var(--primary-color);
+    cursor: pointer;
+}
+
+.header__cart-view-cart {
+    float: right;
+    margin: 0 12px 12px 0;
+}
+
+.header__cart-view-cart:hover {
+    background-color: #F05D41;
 }
