done sort and paging

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -22,6 +22,7 @@ html {
     box-sizing: border-box;
 }
 
+/* Responsive */
 .grid {
     width: 1200px;
     max-width: 100%;
@@ -35,6 +36,20 @@ html {
 .grid__row {
     display: flex;
     flex-wrap: wrap;
+    margin-left: -12px;
+    margin-right: 12px;
+}
+
+.grid__column-2 {
+    padding-left: 12px;
+    padding-right: 12px;
+    width: 16.6667%;
+}
+
+.grid__column-10 {
+    padding-left: 12px;
+    padding-right: 12px;
+    width: calc(100% - 16.6667%);
 }
 
 /* Animation */
@@ -98,15 +113,17 @@ html {
     border: none;
     text-decoration: none;
     border-radius: 2px;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     padding: 0 12px;
     cursor: pointer;
+    outline: none;
     color: var(--text-color);
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     font-weight: 500;
-    line-height: 0;
+    line-height: 1.6rem;
+    /* background-color: var(--white-color); */
 }
 
 .btn.btn--normal:hover {
