--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -5,6 +5,7 @@
     --text-color: #333;
     --primary-color: #ee4d2d;
     --border-color: #dbdbdb;
+    --star-gold-color: #ffce3e;
     --header-height: 120px;
     --navbar-height: 34px;
     --header-with-search-height: calc(var(--header-height) - var(--navbar-height))
@@ -36,19 +37,25 @@ html {
 .grid__row {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -12px;
-    margin-right: 12px;
+    margin-left: -5px;
+    margin-right: -5px;
 }
 
 .grid__column-2 {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
     width: 16.6667%;
 }
 
+.grid__column-2-4 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 20%;
+}
+
 .grid__column-10 {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
     width: calc(100% - 16.6667%);
 }
 
@@ -138,7 +145,7 @@ html {
 .btn.btn--size-s {
     padding: 0 8px;
     height: 30px;
-    font-size: 12px;
+    font-size: 5px;
 }
 
 .fa-google {
@@ -147,4 +154,40 @@ html {
     background-clip: text;
     color: transparent;
     -webkit-text-fill-color: transparent;
+}
+
+.pagination-item--active .pagination-item__link {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+
+.pagination-item--active .pagination-item__link:hover {
+    background-color: #e7654b;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pagination-item {
+    font-size: 2rem;
+    list-style: none;
+    margin: 0 14px;
+}
+
+.pagination-item__link {
+    text-align: center;
+    text-decoration: none;
+    color: #939393;
+    min-width: 40px;
+    height: 30px;
+    line-height: 30px;
+    display: block;
+    border-radius: 2px;
+}
+
+.pagination-item__icon {
+
 }
