--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -42,7 +42,7 @@
 .header__navbar-user-menu {
     position: absolute;
     padding-left: 0;
-    top: calc(100% + 1px);
+    top: calc(100% + 6px);
     right: 0;
     background-color: var(--white-color);
     width: 160px;
@@ -70,7 +70,7 @@
     width: 80%;
     top: -10px;
     right: 0;
-    height: 10px;
+    height: 12px;
     /* background-color: black; */
 }
 
@@ -176,17 +176,19 @@
     width: 186px;
     padding: 8px;
     border-radius: 2px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     display: none;
-    animation: fadeIn ease-in 0.5s;
+    animation: fadeIn ease-in 0.3s;
+    z-index: 1;
 }
 
 .header__qr::before {
     position: absolute;
     left: 0;
-    top: -16px;
-    height: 15px;
+    top: -18px;
+    height: 18px;
     width: 100%;
-    /* background-color: red; */
+    /* background-color: black; */
     content: "";
 }
 
@@ -217,7 +219,7 @@
     cursor: default;
     /* Hiển thị thông báo từ phải qua trái */
     transform-origin: right top;
-    animation: headerNotifyGrowth ease-in 0.26s;
+    animation: headerNotifyGrowth ease-in 0.2s;
     will-change: opacity transform;
     display: none;
     z-index: 99999;
@@ -238,9 +240,9 @@
     display: block;
     position: absolute;
     right: 0;
-    top: -12px;
+    top: -18px;
     width: 100%;
-    height: 12px;
+    height: 18px;
     /* background-color: red; */
 }
 
@@ -433,6 +435,7 @@
     box-shadow: 0 1px 2px #ccc;
     padding-left: 0;
     margin-top: 13px;
+    z-index: 999;
     display: none;
 }
 
@@ -583,6 +586,16 @@
     cursor: pointer;
 }
 
+.header__cart-list::before {
+    content: "";
+    position: absolute;
+    top: -16px;
+    right: 0;
+    width: 50%;
+    height: 16px;
+    /* background-color: black; */
+}
+
 .header__cart-list--no-cart {
     padding: 28px 0;
 }
@@ -631,6 +644,9 @@
     padding-left: 0;
     list-style: none;
     background-color: #FDFDFD;
+    overflow-y: auto;
+    /* 35% chiều cao màn hình */
+    height: 35vh;
 }
 
 .header__cart-item {
@@ -662,9 +678,19 @@
 
 .header__cart-item-name {
     font-size: 1.4rem;
+    line-height: 2rem;
+    max-height: 4rem;
     font-weight: 500;
     color: var(--text-color);
     margin: 0;
+    flex: 1;
+    overflow: hidden;
+    text-align: left;
+    padding-right: 16px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+
 }
 
 .header__cart-item-price {
