--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -17,9 +17,9 @@
 .category__heading {
     font-size: 1.8rem;
     color: var(--text-color);
-    padding: 12px 16px 0;
+    padding: 12px 16px;
     margin-top: 0;
-    /* border-bottom: 1px solid rgba(0, 0, 0, 0.05); */
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
 .category__heading-icon {
@@ -31,20 +31,11 @@
 
 .category-list {
     padding: 0 0 8px 0;
+    margin-left: 10px;
 }
 
 .category-item {
-    position: relative;
     list-style: none;
-}
-
-.category-item::before {
-    content: "";
-    border-top: 1px solid #e1e1e1;
-    position: absolute;
-    top: 0;
-    left: 16px;
-    right: 16px;
 }
 
 .category-item__link {
@@ -53,7 +44,7 @@
     text-decoration: none;
     color: var(--text-color);
     font-size: 1.6rem;
-    padding: 6px 16px;
+    padding: 4px 16px;
     right: 0;
     transition: right linear 0.1s ;
 }
@@ -207,209 +198,200 @@
 }
 
 /* Product item */
-.home-product {
-    margin-bottom: 10px;
-}
 
-.home-product-item {
-    position: relative;
-    margin-top: 10px;
+.home-product__item {
     background-color: var(--white-color);
-    border-radius: 2px;
-    display: block;
-    text-decoration: none;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+    margin-top: 10px;
+    cursor: pointer;
     transition: transform linear 0.1s;
-    will-change: transform;
+    position: relative;
+    border-radius: 3px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
 }
 
-.home-product-item:hover {
-    box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.05);
-    transform: translateY(-1px);
+.home-product__item:hover {
     border: 1px solid var(--primary-color);
+    transform: translateY(-2px)
 }
 
-.home-product-item__img {
-    padding-top: 100%;
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
-    background-repeat: no-repeat;
-    /* size img to hơn so với kích thước thẻ div chứa nó thì dùng 2 thuộc tính để hiển thị đúng vị trí */
-    background-size: cover;
-    background-position: center;
-}
-
-.home-product-item__name {
+.home-product__item:hover .home-product__item-find {
     display: block;
+}
+
+.home-product__item-img {
+    padding-top: 100%;
+    background-size: cover;
+}
+
+.home-product__item-label {
     font-size: 1.4rem;
-    font-weight: 400;
     color: var(--text-color);
-    margin: 10px 10px 6px;
-    /* Mỗi dòng cao 1.8rem */
+    font-weight: 400;
     line-height: 1.8rem;
-    /* Fix cứng chiều cao của thẻ là 3.6 -> Tức là text chỉ được hiển thị tối đa trên 2 dòng, vì 1 dòng là 1.8rem */
     height: 3.6rem;
-    /* Ẩn đi các text ở dòng thứ 3 trở đi */
     overflow: hidden;
-    /* Hiển thị tối đa text trên 2 dòng, vượt quá 2 dòng thì hiển thị 3 chấm(...) */
+
+    display: block;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
-
-    text-overflow: ellipsis;
-}
-
-.home-product-item__price {
-    display: flex;
+    /* margin: 0 10px; */
     margin-left: 10px;
-    justify-content: space-between;
-    align-items: baseline;
-    flex-wrap: wrap;
-}
-
-.home-product-item__price-old {
-    font-size: 1.3rem;
-    color: #666;
-    text-decoration: line-through;
-}
-
-.home-product-item__price-current {
-    font-size: 1.4rem;
-    color: var(--primary-color);
     margin-right: 10px;
 }
 
-.home-product-item__action {
+
+.home-product__item-price {
     display: flex;
     justify-content: space-between;
-    margin: 8px 10px 0;
+    padding: 0 10px;
+    margin-bottom: 8px;
 }
 
-.home-product-item__like {
-
+.home-product__item-price-current {
+    font-size: 1.4rem;
+    color: var(--primary-color);
 }
 
-.home-product-item__like-icon-empty {
-
-}
-
-i.home-product-item__like-icon-fill {
-    color: #F63D30;
-    display: none;
-}
-
-.home-product-item__like--liked .home-product-item__like-icon-fill {
-    display: inline-block;
-}
-
-.home-product-item__rating {
-    font-size: 0.7rem;
-    color: #d5d5d5;
-    margin-left: auto;
-    /* margin-top: -1px; */
-}
-
-.home-product-item__star-gold {
-    color: var(--star-gold-color);
-}
-
-.home-product-item__sold {
+.home-product__item-price-vnd {
     font-size: 1rem;
-    color: var(--text-color);
-    margin-left: 4px;
 }
 
-.home-product-item__origin {
-    display: flex;
-    justify-content: space-between;
-    margin: 4px 0 0;
-    color: #595959;
-    font-size: 1.2rem;
+.home-product__item-sold {
+    font-size: 1.3rem;
+    color: var(--text-color);
     font-weight: 300;
 }
 
-.home-product-item__brand {
-    margin-left: 10px;
-}
-
-.home-product-item__origin-name {
-    margin-right: 10px;
-}
-
-.home-product-item__favourite {
+.home-product__item-sale-off {
+    width: 100%;
     position: absolute;
     top: 10px;
-    left: -4px;
-    color: var(--primary-color);
-    background-color: currentColor;
-    font-size: 1.05rem;
-    font-weight: 500;
-    line-height: 1.6rem;
-    padding-right: 4px;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
+    display: flex;
+    justify-content: space-between;
 }
 
-.home-product-item__favourite::after {
+.home-product__item-like {
+    line-height: 14px;
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    padding: 0 4px;
+    position: relative;
+    left: -3px;
+}
+
+.home-product__item-like::after {
     content: "";
     position: absolute;
-    border-top: 3px solid currentColor;
-    border-left: 3px solid transparent;
-    /* Giảm độ sáng của tông màu */
+    border-width: 3.2px;
+    border-top: 3px solid var(--primary-color); 
+    border-left: 3px solid transparent; 
     filter: brightness(60%);
     left: 0;
     bottom: -3px;
 }
 
-.home-product-item__favourite span {
-    color: var(--white-color);
-
-}
-
-.home-product-item__favourite i {
-    font-size: 0.9rem;
-    margin: 0 2px 0 4px;
-    color: var(--white-color);
-}
-
-.home-product-item__sale-off {
+.home-product__item-percent {
     position: absolute;
-    right: 0;
     top: 0;
-    width: 40px;
-    height: 36px;
-    background-color: rgb(255, 216, 64, 0.94);
-    border-top-right-radius: 2px;
+    right: 0;
+    background-color: rgba(255,212,36,.9);
     text-align: center;
-    /* padding: 4px; */
-    padding: 0;
+    padding: 2px 0;
 }
 
-.home-product-item__sale-off::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    border-width: 0 20px 6px;
-    border-style: solid;
-    border-color: transparent rgb(255, 216, 64, 0.94) transparent rgb(255, 216, 64, 0.94);
-}
-
-.home-product-item__sale-off-percent {
+.home-product__item-percent-num {
+    display: block;
+    font-size: 1rem;
     color: var(--primary-color);
-    font-weight: 600;
-    font-size: 1.3rem;
-    line-height: 1.3rem;
-}
-
-.home-product-item__sale-off-label {
-    color: var(--white-color);
-    font-size: 1.3rem;
-    line-height: 1.3rem;
     font-weight: 500;
+    /* display: block; */
+    padding: 0 6px;
 }
 
-.home-product__pagination {
-    margin-top: 48px;
-    margin-bottom: 32px;
+.home-product__item-percent-wrap {
+    width: 100%;
+    position: relative;
+}
+
+.home-product__item-percent-wrap::after {
+    position: absolute;
+    content: "";
+    border-style: solid;
+    border-width: 0 16px 3px;
+    border-color: transparent rgba(255,212,36,.9);
+    left: 0;
+    width: 0;
+    height: 0;
+    bottom: -3px;
+}
+
+.home-product__item-percent-text {
+    margin-top: -4px;
+    display: block;
+    font-size: 1rem;
+    color: var(--white-color);
+    font-weight: 500;
+    margin-bottom: -2px;
+}
+
+.home-product__item-find {
+    position: absolute;
+    width: 100%;
+    background-color: var(--primary-color);
+    line-height: 32px;
+    text-align: center;
+    color: var(--white-color);
+    display: none;
+    border-bottom-right-radius: 2px;
+    border-bottom-left-radius: 2px;
+    top: 100%;
+    z-index: 9999;
+}
+
+.home-product__item-find-label {
+    font-size: 1.2rem;
+}
+
+.home-banner__sale-off {
+    position: fixed;
+    /* top: 60%; */
+    right: 100px;
+    /* padding-top: 100%; */
+    float: right;
+    height: 82px;
+    width: 82px;
+    cursor: pointer;
+    bottom: 13vh;
+}
+
+/* Paging */
+
+.paging {
+    display: flex;
+}
+
+.home-paging-list {
+    margin: 0 auto;
+}
+
+.btn-outline {
+    /* flex: 1; */
+    min-width: 40px;
+    min-height: 30px;
+    padding: 0 10px;
+    margin: 0 10px;
+    background-color: #F5F5F5;
+}
+
+.btn-cusor--default {
+    cursor: default;
+}
+
+.footer-separate {
+    width: 100%;
+    height: 2px;
+    border: 2px solid var(--primary-color);
+    filter: brightness(90%);
+    margin-top: 40px;
 }
